--- a/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
@@ -18,19 +18,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="전화번호, 사용자 이름 또는 이메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dTH-fL-Q2D">
-                                <rect key="frame" x="15" y="314.66666666666669" width="398" height="48"/>
+                                <rect key="frame" x="15" y="313.33333333333331" width="398" height="48"/>
                                 <color key="textColor" red="0.033189580619999999" green="0.041728019339999999" blue="0.098039209840000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_instagram" translatesAutoresizingMaskIntoConstraints="NO" id="vGm-I5-vFv">
-                                <rect key="frame" x="100" y="203.33333333333334" width="228" height="91.333333333333343"/>
+                                <rect key="frame" x="100" y="202" width="228" height="91.333333333333258"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="vGm-I5-vFv" secondAttribute="height" multiplier="5:2" id="huS-bF-zxJ"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T7j-IX-fOb">
-                                <rect key="frame" x="15" y="382.66666666666669" width="398" height="48"/>
+                                <rect key="frame" x="15" y="381.33333333333331" width="398" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="MrF-p2-gRT"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="k4E-m4-gDv"/>
@@ -39,7 +39,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qmy-M3-h7N">
-                                <rect key="frame" x="308.33333333333331" y="450.66666666666669" width="109.66666666666669" height="24.666666666666686"/>
+                                <rect key="frame" x="304" y="449.33333333333331" width="114" height="27.333333333333314"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain">
                                     <attributedString key="attributedTitle">
@@ -56,7 +56,7 @@
                                 </buttonConfiguration>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aqx-GV-TtZ">
-                                <rect key="frame" x="15" y="495.33333333333326" width="398" height="48"/>
+                                <rect key="frame" x="15" y="496.66666666666674" width="398" height="48"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="로그인"/>
                                 <connections>
@@ -64,7 +64,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q2j-TB-Iu0">
-                                <rect key="frame" x="380" y="392.66666666666669" width="24" height="28"/>
+                                <rect key="frame" x="380" y="391.33333333333331" width="24" height="28"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain"/>
                                 <connections>
@@ -72,7 +72,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfW-zf-DI5">
-                                <rect key="frame" x="15" y="543.33333333333337" width="398" height="48"/>
+                                <rect key="frame" x="15" y="544.66666666666663" width="398" height="48"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="또는" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S1C-QD-CCR">
                                         <rect key="frame" x="188.66666666666666" y="17" width="21" height="14.333333333333336"/>
@@ -108,7 +108,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XQp-YO-4Qb">
-                                <rect key="frame" x="127.33333333333333" y="591.33333333333337" width="173.33333333333337" height="39"/>
+                                <rect key="frame" x="127.33333333333333" y="592.66666666666663" width="173.33333333333337" height="39"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="facebook_logo" title="  페이스북으로 로그인하기">
                                     <fontDescription key="titleFontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="12"/>
@@ -761,6 +761,7 @@
                                             <outlet property="likeLbl" destination="S23-YA-EmL" id="SZp-1P-iZO"/>
                                             <outlet property="postDataLbl" destination="ncc-eC-TbB" id="FMc-9Z-lro"/>
                                             <outlet property="saveBtn" destination="zPO-yi-rjS" id="dg6-Mp-Nzj"/>
+                                            <outlet property="topUserNameBtn" destination="dXI-Kc-wBu" id="8b0-Co-r64"/>
                                             <outlet property="userNameLbl" destination="ebY-08-OfK" id="GfV-V1-BVK"/>
                                         </connections>
                                     </collectionViewCell>
@@ -801,7 +802,7 @@
                 <viewControllerPlaceholder storyboardIdentifier="NoticeViewController" storyboardName="NoticeViewController" referencedIdentifier="NoticeViewController" id="CUL-4V-39z" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nmg-FI-zam" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1233" y="-2052"/>
+            <point key="canvasLocation" x="1171" y="-1560"/>
         </scene>
         <!--Story View Controller-->
         <scene sceneID="ENn-ZE-0Gd">
@@ -814,14 +815,48 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Zj-1y-KxA">
                                 <rect key="frame" x="0.0" y="91" width="428" height="752"/>
                             </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="메세지 보내기" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EB3-UU-iBm">
+                                <rect key="frame" x="20" y="794" width="298" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frU-9C-R1s">
+                                <rect key="frame" x="383" y="798" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="frU-9C-R1s" secondAttribute="height" multiplier="1:1" id="Jtl-ox-P7j"/>
+                                    <constraint firstAttribute="width" constant="30" id="ypY-Th-VBh"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <backgroundConfiguration key="background" image="dm"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ljS-fk-9rc">
+                                <rect key="frame" x="338" y="798" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ljS-fk-9rc" secondAttribute="height" multiplier="1:1" id="I3n-7i-Inr"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <backgroundConfiguration key="background" image="like_uncheck"/>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7gD-pJ-hly"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="7gD-pJ-hly" firstAttribute="bottom" secondItem="ljS-fk-9rc" secondAttribute="bottom" constant="15" id="4gh-9I-qjX"/>
+                            <constraint firstItem="7gD-pJ-hly" firstAttribute="bottom" secondItem="EB3-UU-iBm" secondAttribute="bottom" constant="15" id="Fmr-XF-EOf"/>
                             <constraint firstItem="7gD-pJ-hly" firstAttribute="trailing" secondItem="7Zj-1y-KxA" secondAttribute="trailing" id="KEI-Kg-Avi"/>
+                            <constraint firstItem="EB3-UU-iBm" firstAttribute="leading" secondItem="7gD-pJ-hly" secondAttribute="leading" constant="20" id="LMx-99-4wB"/>
+                            <constraint firstItem="ljS-fk-9rc" firstAttribute="leading" secondItem="EB3-UU-iBm" secondAttribute="trailing" constant="20" id="RdL-l3-NEG"/>
                             <constraint firstItem="7gD-pJ-hly" firstAttribute="bottom" secondItem="7Zj-1y-KxA" secondAttribute="bottom" id="Xbw-ah-J1K"/>
+                            <constraint firstItem="7gD-pJ-hly" firstAttribute="bottom" secondItem="frU-9C-R1s" secondAttribute="bottom" constant="15" id="Xqa-ZI-w39"/>
                             <constraint firstItem="7Zj-1y-KxA" firstAttribute="top" secondItem="7gD-pJ-hly" secondAttribute="top" id="bTD-Pj-I6b"/>
                             <constraint firstItem="7Zj-1y-KxA" firstAttribute="leading" secondItem="7gD-pJ-hly" secondAttribute="leading" id="iJg-9X-ZT0"/>
+                            <constraint firstItem="ljS-fk-9rc" firstAttribute="width" secondItem="frU-9C-R1s" secondAttribute="width" id="mHi-zh-RIO"/>
+                            <constraint firstItem="7gD-pJ-hly" firstAttribute="trailing" secondItem="frU-9C-R1s" secondAttribute="trailing" constant="15" id="ouR-MJ-Fq7"/>
+                            <constraint firstItem="frU-9C-R1s" firstAttribute="leading" secondItem="ljS-fk-9rc" secondAttribute="trailing" constant="15" id="zu5-4Z-v8L"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="M9Y-va-Fu5"/>
@@ -831,7 +866,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9lh-zb-XhW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1936" y="-2453"/>
+            <point key="canvasLocation" x="1935.9813084112147" y="-2453.1317494600435"/>
         </scene>
         <!--Item-->
         <scene sceneID="hZp-OW-mrc">
@@ -2006,7 +2041,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="xz3-xv-lhI"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YhU-Cv-FKo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2185,6 +2220,9 @@
         <image name="tip3" width="869" height="300"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
