--- a/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
@@ -481,6 +481,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" systemColor="systemBackgroundColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="2QE-Jb-dEj" kind="relationship" relationship="viewControllers" id="SSG-J2-esK"/>
